test/src/e2e_vm_tests/test_programs/should_pass/language/raw_identifiers/src/panic.sw
library;

pub fn r#panic(x: u64) -> u64 {
    x
}

pub fn call_panic() -> u64 {
    r#panic(42)
}