test/src/e2e_vm_tests/test_programs/should_fail/struct_field_privacy_reassignment/src/lib.sw
library;

pub struct LibStruct {
    pub x: u64,
    y: u64,
    pub nested: LibNestedStruct,
}

impl LibStruct {
    pub fn new() -> Self {
        Self {
            x: 0,
            y: 0,
            nested: LibNestedStruct {
                x: 0,
                y: 0,
            }
        }
    }
}

pub struct LibNestedStruct {
    pub x: u64,
    y: u64,
}